Changelog
=========

1.0.3 (unreleased)
------------------

- Remove support for Plone 5.0.
  [mbaechtold]

- Test against Plone 5.1.
  [mbaechtold]


1.0.2 (2017-07-31)
------------------

- Use unittest instead unittest2 in tests.
  [elioschmutz]


1.0.1 (2017-07-27)
------------------

- Fix README.rst errors.
  [elioschmutz]


1.0.0 (2017-07-27)
------------------

- Initial release.