@@ -1,0 +1,5 @@
+[buildout]
+extends =
+    https://raw.githubusercontent.com/4teamwork/ftw-buildouts/master/test-plone-5.2.x.cfg
+
+package-name = ftw.slacker
