@@ -10,6 +10,9 @@ Changelog
 - Test against Plone 5.1.
   [mbaechtold]
 
+- Test against Plone 5.2 and Python 3.7.
+  [ericof]
+
 
 1.0.2 (2017-07-31)
 ------------------
